feat: implementada criação automática de Order e refatoração dos services
- Adicionada criação automática de Order quando mesa é reservada/ocupada
- Refatorados services para melhor separação de responsabilidades:
  - KitchenService com métodos específicos para gestão de itens
  - OrderService com fluxo completo de pedidos
  - ClientService com operações específicas para clientes
  - WaiterService com operações específicas para garçons